--- a/uebung.qmd
+++ b/uebung.qmd
@@ -26,11 +26,10 @@ Nachfolgend finden Sie Materialien für die Übung.
 
 ## Datensätze
 
+-   [hotel_stars.RData](https://github.com/jens-klenke/Desk_Stat_WiSe_22/raw/main/exercise/exercise_03/hotel_stars.RData)
+
+
 <!--
--   [CASchools.Rdata](https://github.com/mca91/Eidoe22/raw/main/CASchools.Rdata)
-
-
-
 ## Zusatzaufgabe 1
 
 *Mit dieser Zusatzaufgabe können Sie bis zu 2.5 Zusatzpunkte für die Klausur erwerben. Die Zusatzpunkte werden nur bei bestandener Klausur angerechnet. Sie können die Aufgaben in einer Gruppe von bis zu drei Personen bearbeiten. Ihre Lösungen sind bis einschließlich Mittwoch, den 7.12.2022, unter Nennung von Na- men und Matrikelnummer aller Beteiligten als kommentiertes R-Skript per E-Mail einzureichen (siehe Aufgabenblatt).*
