--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ Bei **wichtigen** Fragen wenden Sie sich bitte per E-Mail an uns:
 
 ## Testate
 
-Aufgrund der technischen Störungen an der Universität Duisburg-Essen wird das 2. Tests, geplant am 30.11.2022, auf unbestimmte Zeit verschoben. Wir werden Sie über Änderungen frühzeitig informieren.
+Aufgrund der technischen Störungen an der Universität Duisburg-Essen wird das 2. Testat, geplant am 30.11.2022, auf unbestimmte Zeit verschoben. Wir werden Sie über Änderungen frühzeitig informieren.
 
 <!--
 ## Discord: Diskussions- und Nachrichtenforum
