--- a/uebung.qmd
+++ b/uebung.qmd
@@ -11,6 +11,7 @@ Nachfolgend finden Sie Materialien für die Übung.
 -   [Übungsblatt 3](https://github.com/jens-klenke/Desk_Stat_WiSe_22/raw/main/exercise/exercise_03/Uebungsblatt_3.pdf)
 -   [Übungsblatt 4](https://github.com/jens-klenke/Desk_Stat_WiSe_22/raw/main/exercise/exercise_04/Uebungsblatt_4.pdf)
 -   [Übungsblatt 5](https://github.com/jens-klenke/Desk_Stat_WiSe_22/raw/main/exercise/exercise_05/Uebungsblatt_5.pdf)
+-   [Übungsblatt 6](https://github.com/jens-klenke/Desk_Stat_WiSe_22/raw/main/exercise/exercise_06/Uebungsblatt_6.pdf)
 
 ## Mitschirften 
 -   [Mitschrift Übung 1](https://github.com/jens-klenke/Desk_Stat_WiSe_22/raw/main/exercise/exercise_01/Mitschrift_Uebung_01.pdf)
