--- a/index.qmd
+++ b/index.qmd
@@ -19,8 +19,8 @@ Bei **wichtigen** Fragen wenden Sie sich bitte per E-Mail an uns:
 Aufgrund der technischen Störungen an der Universität Duisburg-Essen wird das 2. Testat, geplant am 30.11.2022, auf unbestimmte Zeit verschoben. Wir werden Sie über Änderungen frühzeitig informieren.
 
 ## Bonuspunkte
-Weiter Informationen folgen in Kürze.
 
+Die Bonuspunkte der Kahoots bleiben durch die Störungen unverändert. Zu der Handhabung der Bonuspunkte aus den Testaten können wir gegenwärtig noch keine Auskunft geben, da dem Lehrstuhl selbst noch wichtige Informationen über die Ausfallzeit der Informationsdienste der Universität fehlen. Wir können Ihnen aber versichern, dass die gegenwärtige Situation nicht zu Ihrem Nachteil ausgelegt wird. Sobald wir nähere Informationen haben, werden wir diese sowohl in Vorlesung und Übung als auch hier auf der Seite verbreiten.
 
 ## Kahoot!
 
