--- a/index.qmd
+++ b/index.qmd
@@ -44,5 +44,7 @@ Wir möchten Sie außerdem auf folgende Websites mit Lehrmaterialien zu weiteren
 
 ## Discord: Diskussions- und Nachrichtenforum
 
+Bitte nutzen Sie den Channel #diskussion.
+
 <iframe src="https://e.widgetbot.io/channels/1046886827304419368/1046886827304419371" height="600" width="100%"></iframe>
 
