linking chair Homepage

--- a/index.qmd
+++ b/index.qmd
@@ -5,9 +5,18 @@ subtitle: "Lehrstuhl für Ökonometrie (UDE)"
 
 Aufgrund der aktuellen technischen Probleme bei den Informationsdiensten der Universität stellen wir Materialien für den Kurs *Deskriptive Statistik* kurzfristig über diese Website bereit. Beachten Sie, dass `JACK` von der Störung genauso betroffen ist wie alle anderen Dienste.
 
-**Bitte beachten Sie, dass sämtliche E-Mail-Dienste der Universität ebenfalls betroffen sind. Daher haben wir die nachfolgenden E-Mail-Adressen für Sie eingerichtet.**
+
+## Lehrstuhl Homepage
+
+Um die Koordination unserer Module zu vereinfachen haben, wir eine zentrale Seite mit allen Modulen und E-Mail-Adressen eingerichtet.
+
+[Lehrstuhl Homepage](https://jens-klenke.github.io/oek/)
+
 
 ## Kontakt
+
+**Bitte beachten Sie, dass sämtliche E-Mail-Dienste der Universität ebenfalls betroffen sind. Daher haben wir die nachfolgenden E-Mail-Adressen für Sie eingerichtet.**
+
 
 Bei **wichtigen** Fragen wenden Sie sich bitte per E-Mail an uns:
 
