--- a/Vorlesung.qmd
+++ b/Vorlesung.qmd
@@ -1,16 +1,14 @@
 ---
 title: "Vorlesung"
 ---
-<!--
-Bei wichtigen Fragen bzgl. der Vorlesung wenden Sie sich bitte per Email an [Yannick Hoga](mailto:hogayannick@gmail.com?subject=%5BEidÖ%5D).
--->
 
-## Vorlesungs Unterlagen
+## Unterlagen
 
 -   [Skript](https://github.com/jens-klenke/Desk_Stat_WiSe_22/raw/main/lecture/Folien-Deskriptive-Statistik_Kapitel_0-6.pdf)
 -   [Syllabus Präsentation](https://github.com/jens-klenke/Desk_Stat_WiSe_22/raw/main/lecture/SyllabusDeskriptiveStatistik_2022_presentation.pdf)
 -   [Syllabus](https://github.com/jens-klenke/Desk_Stat_WiSe_22/raw/main/lecture/SyllabusDeskriptiveStatistik_2022.pdf)
 
+```{=html}
 <!--
 -   [Altklausur](https://github.com/mca91/Eidoe22/raw/main/altklausur.pdf)
 
@@ -19,3 +17,4 @@ Bei wichtigen Fragen bzgl. der Vorlesung wenden Sie sich bitte per Email an [Yan
 
 [Link zum Online-Companion](https://www.econometrics-with-r.org/)
 -->
+```
