--- a/uebung.qmd
+++ b/uebung.qmd
@@ -23,6 +23,7 @@ Nachfolgend finden Sie Materialien für die Übung.
 -   [Mitschrift Übung 4](https://github.com/jens-klenke/Desk_Stat_WiSe_22/raw/main/exercise/exercise_04/Mitschrift_Uebung_04.pdf)
 -   [Mitschrift Übung 5](https://github.com/jens-klenke/Desk_Stat_WiSe_22/raw/main/exercise/exercise_05/Mitschrift_Uebung_05.pdf)
 -   [Mitschrift Übung 6](https://github.com/jens-klenke/Desk_Stat_WiSe_22/raw/main/exercise/exercise_06/Mitschrift_Uebung_06.pdf)
+-   [Mitschrift Übung 7](https://github.com/jens-klenke/Desk_Stat_WiSe_22/raw/main/exercise/exercise_07/Mitschrift_Uebung_07.pdf)
 
 ## R-Lösungen
 -   [R-Lösungen Übung 1](https://github.com/jens-klenke/Desk_Stat_WiSe_22/raw/main/exercise/exercise_01/R_code_exercise_1.R)
@@ -31,6 +32,7 @@ Nachfolgend finden Sie Materialien für die Übung.
 -   [R-Lösungen Übung 4](https://github.com/jens-klenke/Desk_Stat_WiSe_22/raw/main/exercise/exercise_04/R_code_exercise_4.R)
 -   [R-Lösungen Übung 5](https://github.com/jens-klenke/Desk_Stat_WiSe_22/raw/main/exercise/exercise_05/R_code_exercise_5.R)
 -   [R-Lösungen Übung 6](https://github.com/jens-klenke/Desk_Stat_WiSe_22/raw/main/exercise/exercise_06/R_code_exercise_6.R)
+-   [R-Lösungen Übung 7](https://github.com/jens-klenke/Desk_Stat_WiSe_22/raw/main/exercise/exercise_07/R_code_exercise_7.R)
 
 ## Datensätze
 
