--- a/uebung.qmd
+++ b/uebung.qmd
@@ -14,6 +14,8 @@ Nachfolgend finden Sie Materialien für die Übung.
 -   [Übungsblatt 6](https://github.com/jens-klenke/Desk_Stat_WiSe_22/raw/main/exercise/exercise_06/Uebungsblatt_6.pdf)
 -   [Übungsblatt 7](https://github.com/jens-klenke/Desk_Stat_WiSe_22/raw/main/exercise/exercise_07/Uebungsblatt_7.pdf)
 -   [Übungsblatt 8](https://github.com/jens-klenke/Desk_Stat_WiSe_22/raw/main/exercise/exercise_08/Uebungsblatt_8.pdf)
+-   [Übungsblatt 9](https://github.com/jens-klenke/Desk_Stat_WiSe_22/raw/main/exercise/exercise_09/Uebungsblatt_9.pdf)
+
 
 
 ## Mitschirften 
